# gs2

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
conf/: config.json  schema.py
docs/: ARCHITECTURE.md  CONFIG.md  PACKET.md  SETUP.md  SIMULATION.md
docs/assets/: sim_config.json
groundstation/: asgi.py  config.json  example_config.json  settings.py  urls.py  wsgi.py
groundstation/dal/: consumer.py  controllers.py  fsbridge.py  gndconsumer.py  gndws.py  packet.py
groundstation/daphne/management/commands/: runserver.py
groundstation/dashboard/: admin.py  consumers.py  models.py  urls.py  views.py
groundstation/dashboard/migrations/: 0001_initial.py  0002_remove_test_test_id.py  0003_test_completed_test_environment.py  0004_alter_test_environment.py
groundstation/data/: bridge.py  controllers.py  packet.py
groundstation/static/css/: base.css  dashboard.css  main.css  nav.css  tests.css
groundstation/static/js/: common.js  pid.js  socket.js  tests.js
groundstation/templates/: base.html  header.html  home.html  nav.html  sidebar.html  tests.html
groundstation/templates/dashboard/: dashboard.html
