[tool.poetry]
name = "gs2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
channels = "^4.1.0"
daphne = "^4.1.2"
django-htmx = "^1.17.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 100
exclude = """
/(
    migrations
)/
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
